--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "dev": "node esbuild.config.mjs",
     "build": "node esbuild.config.mjs production",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
     "deploy:test": "node esbuild.config.mjs production && node deploy.mjs test",
+    "deploy:staging": "node esbuild.config.mjs production && node deploy.mjs staging",
     "deploy:production": "node esbuild.config.mjs production && node deploy.mjs production"
   },
   "keywords": [
@@ -18,14 +22,18 @@
   "author": "Brad Wales",
   "license": "MIT",
   "devDependencies": {
+    "@testing-library/react": "^16.3.2",
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "@vitest/coverage-v8": "^4.0.18",
     "builtin-modules": "^3.3.0",
     "esbuild": "^0.19.0",
+    "jsdom": "^28.0.0",
     "obsidian": "latest",
     "tslib": "^2.6.0",
-    "typescript": "^5.3.0"
+    "typescript": "^5.3.0",
+    "vitest": "^4.0.18"
   },
   "dependencies": {
     "react": "^18.2.0",
