feat(phase-10): polish, integration and final settings - v0.9.0
- Replace dangerouslySetInnerHTML in FuelTooltip with safe JSX rendering
- Replace 8 toISOString().split(T)[0] calls with formatLocalDate() across 5 files
- Ribbon icon now opens OrbitHubModal directly instead of sidebar view
- Rename command from Update Contacts to Orbit Hub (id: orbit-hub)
- Update manifest.json to v0.9.0, minAppVersion 1.10.0, community-ready description
- Create versions.json for BRAT compatibility
- Fix 2 test assertions for UTC-to-local date migration
- All 585 tests pass across 36 test files

--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
     "id": "orbit",
     "name": "Orbit",
-    "version": "0.0.1",
-    "minAppVersion": "1.0.0",
-    "description": "A Relationship Manager for Obsidian - Keep your people in your orbit",
+    "version": "0.9.0",
+    "minAppVersion": "1.10.0",
+    "description": "Track and manage your relationships to keep important people in your orbit.",
     "author": "Brad Wales",
     "authorUrl": "https://github.com/thuban87",
     "isDesktopOnly": false
